[package]
name = "bless"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
uuid = { version = "1", features = ["v4"] }
clap = "3.0"
wild = "2.2.1"
tokio = {"version"="1.36.0", features=["rt-multi-thread", "macros"]}
async-trait = "0.1.77"
mongodb = "2.8.1"
bson = "2.9.0"
log = "0.4.21"
fern = "0.6.2"
humantime = "2.1.0"
